# drones_races_maps_generation

./: .gitignore  LICENSE  README.md  pyproject.toml
Project/: dataset_generator.py  inference.py  model.py  train.py  visualize.py  Проект трасса дронов.docx
Project2.0/: PLAN.md  agent.py  environment.py  gate_dataset.py  gate_generator.py  gate_inference.py  gate_model.py  gate_train.py  gate_visualize.py  train_rl.py
Project2.0/data/: gate_configs.npz
Project2.0/models/: best_model.pt
Project3.0/: agent.py  train_rl.py
Project3.0/models/: best_model.pt
Project4.0/: agent.py  environment_simple.py  train_rl.py
Project5.0/: agent.py  environment.py  environment_simple.py  environment_v4.py  train_rl.py
Project6.0/: PLAN.md  agent.py  environment_parametric_flags.py  environment_with_flags.py  finetune_flags.py  flag_network.pt  flag_network.py  flag_network_best.pt  generate_track.py  model_3g0f.pt  model_3g3f_supervised.pt  model_3g3f_warmup.pt  model_gates_greedy_flags.pt  save_and_visualize.py  supervised_flags.py  test_env.py  test_parametric.py  test_two_networks.py  train_flags_only.py  train_gates_flags_simple.py  train_gates_with_flags.py  train_rl.py  visualize_final.py
logs/: Log - 4fea53e7216540918a6591a3c20b2735.txt  Log - 6700b197520f4fbdbf55b5e8e9247706.txt  Log - 6bbdc87f0db64b189d4a1f8247bd9bda.txt  Log - 7ca72a78c4954ddeab83060393a66c08.txt  Log - ad5b11bca1a6480a97fda37258dae4fe.txt  Log - colab.txt  Log - eff59b4b1c1742848401b21553774edc.txt  Log - f76216dbe6c443cfb98c7f2c6a852ad7.txt  Log - local.txt
(+3 files in other folders)
